--- a/simple-little-table/index.html
+++ b/simple-little-table/index.html
@@ -190,9 +190,9 @@ table tr:hover td{
 <center>
 <table cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
 	<tr>
-		<th>Student Name</th>
-		<th>Email Adress</th>
-		<th>sec No</th>
+		<th>mostafa alsabagh</th>
+		<th>mostaffa4444.ma@gmail.com</th>
+		<th>2</th>
 	</tr><!-- Table Header -->
     
 	<tr>
